<resources>
    <string name="app_name">BarBuds</string>

    //register page stuff
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_registration">Go to Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>